[package]
name = "beam_node"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
beam_core = { path = "../beam_core" }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true

